--- a/frege/templates/registration/register.html
+++ b/frege/templates/registration/register.html
@@ -26,11 +26,11 @@
 
   <form method="post" id="login-form" autocomplete="off" style="color: rgb(16,16,16); font-size: 110%;">{% csrf_token %}
     <label for="id_username">שם משתמש/ת</label>
-    <input autocomplete="off" value="{%if form.username.value %}{{form.username.value}}{% endif %}" type="text" id="id_username" name="username" class="form-control" autofocus style="margin-top: -10px;"/>
+    <input autocomplete="off" autocapitalize="none" value="{%if form.username.value %}{{form.username.value}}{% endif %}" type="text" id="id_username" name="username" class="form-control" autofocus style="margin-top: -10px;"/>
     <label for="id_password1" style="margin-top: 20px;">סיסמה</label>
-    <input  autocomplete="off" value="{%if form.password1.value %}{{form.password1.value}}{% endif %}" type="password" id="id_password1" name="password1" class="form-control" style="margin-top: -10px;">
+    <input autocomplete="off" autocapitalize="none" value="{%if form.password1.value %}{{form.password1.value}}{% endif %}" type="password" id="id_password1" name="password1" class="form-control" style="margin-top: -10px;">
     <label for="id_password2" style="margin-top: 20px;">אימות סיסמה</label>
-    <input  autocomplete="off" value="{%if form.password2.value %}{{form.password2.value}}{% endif %}" type="password" id="id_password2" name="password2" class="form-control" style="margin-top: -10px;">
+    <input autocomplete="off" autocapitalize="none" value="{%if form.password2.value %}{{form.password2.value}}{% endif %}" type="password" id="id_password2" name="password2" class="form-control" style="margin-top: -10px;">
     <div>
       <button class="btn btn-lg btn-primary btn-block" type="submit" style="margin-top: 20px; font-size: 130%;">
         רישום
