overrider border css for formula btn

--- a/frege/logic/static/logic/css/admin.css
+++ b/frege/logic/static/logic/css/admin.css
@@ -17,6 +17,7 @@
     font-family: 'Lucida Console', Monaco, monospace;
     font-size: 120%;
     direction: ltr;
+    border: 0px solid #000 !important;
 }
 .formula-btn:hover {
     background-color: rgb(200,200,200) !important;
