--- a/frege/logic/templates/logic/deduction.html
+++ b/frege/logic/templates/logic/deduction.html
@@ -6,57 +6,56 @@
 
 {% block question_content %}
 
-  <div dir="ltr">
-    <table id="deduction" class="" style="font-size: 110%;">
-      <tbody>
-        <tr></tr>
-      </tbody>
-    </table>
-    <div class="page-header" style="margin-top: 5px; margin-bottom: 10px;">
-    </div>
-    <div class="noselect">
-      <button class="btn btn-default dd-btn" id="neg-e">E ~</button>
-      <button class="btn btn-default dd-btn" id="con-e">E ·</button>
-      <button class="btn btn-default dd-btn" id="dis-e">E ∨</button>
-      <button class="btn btn-default dd-btn" id="imp-e">E ⊃</button>
-      <button class="btn btn-default dd-btn" id="eqv-e">E ≡</button>
-    </div>
-    <div class="noselect">
-      <button class="btn btn-default dd-btn" id="neg-i">I ~</button>
-      <button class="btn btn-default dd-btn" id="con-i">I ·</button>
-      <button class="btn btn-default dd-btn" id="dis-i">I ∨</button>
-      <button class="btn btn-default dd-btn" id="imp-i">I ⊃</button>
-      <button class="btn btn-default dd-btn" id="eqv-i">I ≡</button>
-    </div>
-    <div class="noselect">
-      <button class="btn btn-default dd-btn" id="hyp">hyp</button>
-      <button class="btn btn-default dd-btn" id="rep">rep</button>
-      <button class="btn btn-default dd-btn" id="rem"><span class="glyphicon glyphicon-trash" style="margin-top: 6px;"></span></button>
-    </div>
-    <div class="noselect" id="extra" style="opacity: 0;">
-      <input type="text" id="extxt" style="margin-top: 10px;" size="28" maxlength="30" autocorrect="off" autocapitalize="none">
-      <label for="extxt" style="margin-left: 10px;">נוסחה</label>
-      <div>
-        <input type="button" class="btn sym-btn" id="neg" value="~"/>
-        <input type="button" class="btn sym-btn" id="con" value="·"/>
-        <input type="button" class="btn sym-btn" id="dis" value="∨"/>
-        <input type="button" class="btn sym-btn" id="imp" value="⊃"/>
-        <input type="button" class="btn sym-btn" id="eqv" value="≡"/>
-      </div>
+<div dir="ltr">
+  <table id="deduction" class="" style="font-size: 110%;">
+    <tbody>
+      <tr></tr>
+    </tbody>
+  </table>
+  <div class="page-header" style="margin-top: 5px; margin-bottom: 10px;">
+  </div>
+  <div class="noselect">
+    <button class="btn btn-default dd-btn" id="neg-e">E ~</button>
+    <button class="btn btn-default dd-btn" id="con-e">E ·</button>
+    <button class="btn btn-default dd-btn" id="dis-e">E ∨</button>
+    <button class="btn btn-default dd-btn" id="imp-e">E ⊃</button>
+    <button class="btn btn-default dd-btn" id="eqv-e">E ≡</button>
+  </div>
+  <div class="noselect">
+    <button class="btn btn-default dd-btn" id="neg-i">I ~</button>
+    <button class="btn btn-default dd-btn" id="con-i">I ·</button>
+    <button class="btn btn-default dd-btn" id="dis-i">I ∨</button>
+    <button class="btn btn-default dd-btn" id="imp-i">I ⊃</button>
+    <button class="btn btn-default dd-btn" id="eqv-i">I ≡</button>
+  </div>
+  <div class="noselect">
+    <button class="btn btn-default dd-btn" id="hyp">hyp</button>
+    <button class="btn btn-default dd-btn" id="rep">rep</button>
+    <button class="btn btn-default dd-btn" id="rem"><span class="glyphicon glyphicon-trash" style="margin-top: 6px;"></span></button>
+  </div>
+  <div class="noselect" id="extra" style="opacity: 0;">
+    <input type="text" id="extxt" style="margin-top: 10px; padding-left: 3px;" size="28" maxlength="30" autocorrect="off" autocapitalize="none">
+    <label for="extxt" style="margin-left: 10px;">נוסחה</label>
+    <div>
+      <input type="button" class="btn sym-btn" id="neg" value="~"/>
+      <input type="button" class="btn sym-btn" id="con" value="·"/>
+      <input type="button" class="btn sym-btn" id="dis" value="∨"/>
+      <input type="button" class="btn sym-btn" id="imp" value="⊃"/>
+      <input type="button" class="btn sym-btn" id="eqv" value="≡"/>
     </div>
   </div>
-
-  <script src="{% static 'logic/js/deduction.js'%}"></script>
-  <script>
-    {% for premise in premises %}addRow('{{premise}}', '', true);{% endfor %}
-    function isEmpty() {
-        if (dd.nesting() > 0)
-            return 'לא ניתן לסיים דדוקציה עם תת הוכחה פתוחה';
-        if (dd.idx() <= {{ premises|length }})
-            return 'יש לעשות לפחות צעד אחד';
-    }
-    function getPostData() {
-        return {'conclusion':dd.get(dd.idx()).lit};
-    }
-  </script>
+</div>
+<script src="{% static 'logic/js/deduction.js'%}"></script>
+<script>
+  {% for premise in premises %}addRow('{{premise}}', '', true);{% endfor %}
+  function isEmpty() {
+      if (dd.nesting() > 0)
+          return 'לא ניתן לסיים דדוקציה עם תת הוכחה פתוחה';
+      if (dd.idx() <= {{ premises|length }})
+          return 'יש לעשות לפחות צעד אחד';
+  }
+  function getPostData() {
+      return {'conclusion':dd.get(dd.idx()).lit};
+  }
+</script>
 {% endblock question_content %} 
