added hover effect to symbol button

--- a/frege/logic/static/logic/css/mycss.css
+++ b/frege/logic/static/logic/css/mycss.css
@@ -138,6 +138,9 @@ input:-webkit-autofill {
     height: 30px;
     padding: 0px;
 }
+.sym-btn:hover {
+  background-color: #ddd;
+}
 
 /* hypothesis vertical line */
 .dd-hyp {
