--- a/frege/logic/templates/logic/deduction.html
+++ b/frege/logic/templates/logic/deduction.html
@@ -45,6 +45,7 @@
     </div>
   </div>
 </div>
+<script src="{% static 'logic/js/formula.js'%}"></script>
 <script src="{% static 'logic/js/deduction.js'%}"></script>
 <script>
   {% for premise in premises %}addRow('{{premise}}', '', true);{% endfor %}
