--- a/frege/logic/templates/logic/formulation.html
+++ b/frege/logic/templates/logic/formulation.html
@@ -1,4 +1,5 @@
 {% extends "logic/question_base.html" %}
+{% load staticfiles %}
 
 {% block question_text %}{{ question.text }}{% endblock %}
 {% block question_instruction %}הצרנה{% endblock %}
@@ -15,9 +16,16 @@
   </div>
 </div>
 
+<script src="{% static 'logic/js/formula.js'%}"></script>
 <script>
   function isEmpty() {
-      if (!$("#ftxt").val()) return 'יש להזין תשובה'
+      var f = $("#ftxt").val();
+      if (!f) return 'יש להזין תשובה';
+      try {
+          new Formula(f);
+      } catch (e) {
+          return e.message;
+      }
   }
   function getPostData() {
       return {'formulation':$('#ftxt').val()};
