added user page with submission stats

--- a/frege/logic/templates/logic/truth_table.html
+++ b/frege/logic/templates/logic/truth_table.html
@@ -5,7 +5,7 @@
 
 {% block question_content %}
   <div class="table-responsive">
-    <table class="table table-bordered table-condensed table-hover noselect formal">
+    <table class="table table-bordered table-condensed table-hover noselect formal" style="table-layout: auto !important;">
       <thead>
         <tr style="font-size: 110%;">
         {% for var in truth_table.variables %}
