--- a/frege/logic/templates/logic/base.html
+++ b/frege/logic/templates/logic/base.html
@@ -17,7 +17,7 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav pull-right">
-            <li><a href="#contact"><span class="glyphicon glyphicon-user"></span> {% firstof user.get_full_name user.get_username %}</a></li>
+            <li><a href="{% url 'logic:user'%}"><span class="glyphicon glyphicon-user"></span> {% firstof user.get_full_name user.get_username %}</a></li>
             <li><a href="{% url 'logic:index'%}"><span class="glyphicon glyphicon-th-list"></span> פרקים</a></li>
           </ul>
           <ul class="nav navbar-nav pull-left">
