--- a/frege/logic/templates/logic/user.html
+++ b/frege/logic/templates/logic/user.html
@@ -19,7 +19,7 @@
       </p>
       <p>
         אחוז הצלחה: {{avg}}%<br>
-      לפי סוג:
+      לפי סוג שאלה:
       <table class="table table-condensed">
         {% for name, pct in stats.iteritems %}
         <tr>
