--- a/frege/logic/templates/logic/question_base.html
+++ b/frege/logic/templates/logic/question_base.html
@@ -12,8 +12,8 @@
     {% endblock %}
     <div class="noselect" style="padding: 5px;margin-top: 20px;">
       <button class="btn btn-default btn-lg" id="answer">אישור</button>
-      <button class="btn btn-default answered btn-lg" style="visibility: hidden;" id="next">המשך</button>
-      <button class="btn btn-primary btn-lg" style="visibility: hidden;" id="sum" data-toggle="modal" data-target="#confirm-delete">סיום פרק</button>
+      <button class="btn btn-default answered btn-lg" style="display: none;" id="next">המשך</button>
+      <button class="btn btn-primary btn-lg" style="display: {% if complete %}inline{% else %}none{% endif %};" id="sum" data-toggle="modal" data-target="#confirm-delete">סיום פרק</button>
     </div>
   </div>
 </div>
