404 and 500 awesome pages

--- a/frege/templates/500.html
+++ b/frege/templates/500.html
@@ -3,15 +3,15 @@
 {% block body_content %}
 
 <style>
-  h1, h2, h3, h4, h5 {
+  p, h1, h2, h3, h4, h5 {
     color: #555;
+    text-decoration: none !important;
   }
-  h1 { font-size: 500%; }
 </style>
-
 <div class="text-center">
-<h1 dir="ltr">~∃</h1>
-<h3>אין עמוד כזה.</h3>
+<h1>שברת משהו.</h1>
+<h1 dir="ltr">:(</h1>
+<h3>קרתה תקלה בשרת. אל דאגה, הבעיה נרשמה והיא תטופל בהקדם.</h3>
 <h3><a href="{% url 'logic:index' %}">חזרה למקום בטוח</a></h3>
 </div>
 
