--- a/frege/logic/templates/logic/basic_base.html
+++ b/frege/logic/templates/logic/basic_base.html
@@ -35,7 +35,7 @@
 
     <link href="{% static 'logic/bootstrap/css/bootstrap.min.css'%}" rel="stylesheet">
     <link href="{% static 'logic/bootstrap/css/bootstrap-paper.min.css'%}" rel="stylesheet">
-    <link href="{% static 'logic/css/mycss.min.css'%}" rel="stylesheet" media="screen">
+    <link href="{% static 'logic/css/mycss.css'%}" rel="stylesheet" media="screen">
     <link href="https://fonts.googleapis.com/css?family=Trirong|Alef" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="{% static 'logic/bootstrap/js/bootstrap.min.js'%}"></script>
