--- a/frege/logic/templates/logic/question_base.html
+++ b/frege/logic/templates/logic/question_base.html
@@ -1,6 +1,6 @@
 {% extends "logic/chapter_base.html" %}
 {% block title %}שאלה {{question.number }} פרק {{ chapter.number }}{% endblock %}
-{% block topic_header %}שאלה {{ question.number }}{% endblock %}
+{% block topic_header %}שאלה {{ question.number }}{% if followup %}: המשך{% endif %}{% endblock %}
 
 {% block chapter_content %}
 <div class="panel panel-default">
@@ -20,7 +20,11 @@
 <script>
   function reg() {
       $('#answer').one('click', function() {
+          {% if followup %}
+          ans('{% url 'logic:followup' chapter.number question.number %}', '{{ csrf_token }}');
+          {% else %}
           ans('{% url 'logic:question' chapter.number question.number %}', '{{ csrf_token }}');
+          {% endif %}
       });
   }
   $(document).ready(reg);
@@ -59,9 +63,9 @@ $(document).ready(function() {
     <div class="panel-body noselect">
 {% for qnum, correct in chap_questions.iteritems %}
   {% if question and qnum == question.number %}
-      <button class="btn btn-primary">{{ qnum }}</button>
+      <button class="btn btn-primary btn-q">{{ qnum }}</button>
   {% else %}
-      <a href='{% url 'logic:question' chapter.number qnum %}' class={% if correct == None %}"btn btn-default"{% else %}"btn btn-default answered"{% endif %}>{{ qnum }}</a>
+      <a href='{% url 'logic:question' chapter.number qnum %}' class="btn btn-default btn-q{% if correct != None %} answered{% endif %}">{{ qnum }}</a>
   {% endif %}
 {% endfor %}
     </div>
