--- a/frege/logic/templates/logic/question_base.html
+++ b/frege/logic/templates/logic/question_base.html
@@ -5,6 +5,8 @@
 {% block chapter_content %}
 <div class="panel panel-default">
   <div class="panel-body">
+    <p class="text-muted hint">{% if ans_time %}ענית על שאלה זו ב-{{ans_time}}{% endif %}</p>
+    <p class="text-muted hint">{% if question.has_followup %}לשאלה זו יש המשך{% endif %}</p>
     <p style="white-space: pre-wrap; font-size: 110%;">{% block question_text %}{% endblock %}</p>
     <div class="page-header" style="margin-top: -18px;"></div>
     <p class="noselect"><b>{% block question_instruction %}{% endblock %}</b></p>
@@ -12,7 +14,7 @@
     {% endblock %}
     <div class="noselect" style="padding: 5px;margin-top: 20px;">
       <button class="btn btn-default btn-lg" id="answer">אישור</button>
-      <button class="btn btn-default answered btn-lg" style="display: none;" id="next">המשך</button>
+      <button class="btn btn-default answered btn-lg" style="display: none;" id="next">{% if question.has_followup %}המשך{% else %}שאלה הבאה{% endif %}</button>
       <button class="btn btn-primary btn-lg" style="display: {% if complete %}inline{% else %}none{% endif %};" id="sum" data-toggle="modal" data-target="#confirm-delete">סיום פרק</button>
     </div>
   </div>
