--- a/frege/logic/templates/logic/question_base.html
+++ b/frege/logic/templates/logic/question_base.html
@@ -13,9 +13,9 @@
     {% block question_content %}
     {% endblock %}
     <div class="noselect" style="padding: 5px;margin-top: 20px;">
-      {% if followup %}<a href='{% url 'logic:question' chapter.number question.number %}' class="btn btn-default answered btn-lg">חזרה</a>{% endif %}
+      {% if followup %}<a href='{% url 'logic:question' chapter.number question.number %}' class="btn btn-default silent btn-lg">חזרה</a>{% endif %}
       <button class="btn btn-default btn-lg" id="answer">אישור</button>
-      <button class="btn btn-default answered btn-lg" {% if answer and question.has_followup %}onclick="location.href='{% url 'logic:followup' chapter.number question.number %}';"{% else %}style="display: none;"{% endif %} id="next">{% if question.has_followup %}המשך{% else %}שאלה הבאה{% endif %}</button>
+      <button class="btn btn-default {% if question.has_followup %}silent{% else %}answered{% endif %} btn-lg" {% if answer and question.has_followup %}onclick="location.href='{% url 'logic:followup' chapter.number question.number %}';"{% else %}style="display: none;"{% endif %} id="next">{% if question.has_followup %}המשך{% else %}שאלה הבאה{% endif %}</button>
       <button class="btn btn-primary btn-lg" style="display: {% if complete %}inline{% else %}none{% endif %};" id="sum" data-toggle="modal" data-target="#confirm-delete">סיום פרק</button>
     </div>
   </div>
@@ -64,11 +64,11 @@ $(document).ready(function() {
   <div class="page-header"></div>
   <div class="panel panel-default">
     <div class="panel-body noselect">
-{% for qnum, correct in chap_questions.iteritems %}
+{% for qnum, status in chap_questions.iteritems %}
   {% if question and qnum == question.number %}
       <button class="btn btn-primary btn-q">{{ qnum }}</button>
   {% else %}
-      <a href='{% url 'logic:question' chapter.number qnum %}' class="btn btn-default btn-q{% if correct != None %} answered{% endif %}">{{ qnum }}</a>
+      <a href='{% url 'logic:question' chapter.number qnum %}' class="btn btn-default btn-q {% if status == 'half' %}silent{% elif status %}answered{% endif %}">{{ qnum }}</a>
   {% endif %}
 {% endfor %}
     </div>
