added quantifier buttons in question view

--- a/frege/logic/templates/logic/formulation.html
+++ b/frege/logic/templates/logic/formulation.html
@@ -13,6 +13,8 @@
     <input type="button" class="btn sym-btn" id="dis" value="∨"/>
     <input type="button" class="btn sym-btn" id="imp" value="⊃"/>
     <input type="button" class="btn sym-btn" id="eqv" value="≡"/>
+    <input type="button" class="btn sym-btn" id="all" value="∀"/>
+    <input type="button" class="btn sym-btn" id="exs" value="∃"/>
     <input type="button" class="btn sym-btn" id="thf" value="∴"/>
   </div>
 </div>
