some fixes for propositional predicate deduction

--- a/frege/logic/templates/logic/deduction.html
+++ b/frege/logic/templates/logic/deduction.html
@@ -55,8 +55,8 @@
   }
 {% else %}
   {% for premise in premises %}
-  dd.push(new Formula('{{premise}}'), 'prem');
-  addRow('{{premise}}', 'prem', {{forloop.counter}});
+  dd.push(formalize('{{premise.literal}}', 'Formula'), 'prem');
+  addRow('{{premise.literal}}', 'prem', {{forloop.counter}});
   {% endfor %}
 {% endif %}
   function isEmpty() {
