--- a/frege/logic/templates/logic/deduction.html
+++ b/frege/logic/templates/logic/deduction.html
@@ -44,12 +44,15 @@
     <button class="btn btn-default dd-btn" id="rep">rep</button>
     <button class="btn btn-default dd-btn" id="rem"><span class="glyphicon glyphicon-trash" style="margin-top: 6px;"></span></button>
   </div>
-  <div class="noselect text-center" id="extra" style="display: none; margin-top: 20px;">
+  <div class="noselect text-center" id="extra" style="display: none; margin-top: 15px;">
     <div>
+      <label for="inp" id="ftxtHint" class="text-muted small" style="horizontal-align: right;"></label>
+    </div>
+    <div id="inp">
       <button class="btn btn-default" id="txtCnl"><span class="glyphicon glyphicon-remove"></span></button>
       <button class="btn btn-primary" id="txtOk"><span class="glyphicon glyphicon-ok"></span></button>
       <input type="text" id="ftxt" style="padding-left: 3px;" size="32" maxlength="30" autocorrect="off" autocapitalize="none">
-      <label for="ftxt" id="ftxtLbl" style="margin-left: 8px;">נוסחה</label>
+      <label for="ftxt" id="ftxtLbl" style="margin-left: 8px;"></label>
     </div>
     <div>
       <input type="button" class="btn sym-btn" id="neg" value="~"/>
