--- a/frege/logic/static/logic/css/mycss.css
+++ b/frege/logic/static/logic/css/mycss.css
@@ -204,7 +204,7 @@ input:-webkit-autofill {
   left:0px;
 }
 
-/* Other */
+/* Input */
 
 input[type=text], textarea {
   -webkit-transition: all 0.3s ease-in-out;
@@ -219,6 +219,11 @@ input[type=text], textarea {
 input[type=text]:focus {
   box-shadow: 0 0 2px #ccc;
   border: 1px solid #ccc;
+}
+
+.txtIn {
+    direction: ltr;
+    padding-left: 4px !important;
 }
 
 /* for notifications */
