--- a/frege/logic/templates/logic/formulation.html
+++ b/frege/logic/templates/logic/formulation.html
@@ -6,7 +6,7 @@
 
 {% block question_content %}
 <div class="noselect">
-  <input type="text" id="ftxt" dir="ltr" style="margin-bottom: 10px; font-size: 95%; padding-left: 4px; max-width: 100%;" size="50" maxlength="50" autocorrect="off" autocapitalize="none" value="{{answer}}">
+  <input type="text" id="ftxt" class="txtIn" style="margin-bottom: 10px; font-size: 95%; max-width: 100%;" size="50" maxlength="50" autocorrect="off" autocapitalize="none" value="{{answer}}">
   <div>
     <input type="button" class="btn sym-btn" id="neg" value="~"/>
     <input type="button" class="btn sym-btn" id="con" value="·"/>
