--- a/frege/logic/templates/logic/model.html
+++ b/frege/logic/templates/logic/model.html
@@ -50,7 +50,7 @@
           throw 'ערך לא חוקי בתחום דיון';
       }
       if (domain.length == 0) {
-          throw 'תחום דיום לא יכול להיות ריק';
+          throw 'תחום דיון לא יכול להיות ריק';
       }
       _validate(domain);
       domain = domain.split(',');
